--- a/bocha.cbp
+++ b/bocha.cbp
@@ -33,10 +33,11 @@
 		</Compiler>
 		<Unit filename="equipos.cpp" />
 		<Unit filename="equipos.h" />
-		<Unit filename="funciones.h" />
 		<Unit filename="jugador.cpp" />
 		<Unit filename="jugador.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="menu.cpp" />
+		<Unit filename="menu.h" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
 		</Extensions>
