--- a/bocha.cbp
+++ b/bocha.cbp
@@ -40,6 +40,8 @@
 		<Unit filename="main.cpp" />
 		<Unit filename="menu.cpp" />
 		<Unit filename="menu.h" />
+		<Unit filename="partido.cpp" />
+		<Unit filename="partido.h" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
 		</Extensions>
